# Roomba_Gazebo_Obstacle_Detect

./: .gitignore  README.md  dconfig
results/Roomba/: cppcheck.txt  cpplint.txt
results/results/ros2bag/: metadata.yaml  ros2bag_0.db3
results/ros2bag/: metadata.yaml  ros2bag_0.db3
src/obstacle_control/: CMakeLists.txt  compile_commands.json  package.xml
src/obstacle_control/include/obstacle_control/: RoombaNode.hpp
src/obstacle_control/launch/: gazebo.launch.py
src/obstacle_control/src/: RoombaNode.cpp  obstacle_controller.cpp
